hphp/hack/test/typecheck/reified_generics/is_as_deep_inference_check.php.legacy.exp
File "is_as_deep_inference_check.php", line 6, characters 10-10:
Was expecting a return type hint (Typing[4030])
File "is_as_deep_inference_check.php", line 15, characters 5-6:
Invalid argument (Typing[4110])
File "is_as_deep_inference_check.php", line 7, characters 3-14:
This is an object of type Reified<int>
File "is_as_deep_inference_check.php", line 12, characters 5-7:
It is incompatible with an int
