hphp/hack/test/typecheck/reified_generics/is_as_deep_inference_check.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class Reified<reify T> {}

function f(Reified<Reified<
  Reified<int>
>> $r) {}

function g(): void {
  $a = 3 as Reified<Reified<
    int
  >>;

  f($a);
}
